remove user scopes
Signed-off-by: Stephen Crawford <steecraw@amazon.com>